# Wave_Equation

./: .gitignore  CMakeLists.txt  README.md  input_parser.cpp  main.cpp  parameters.prm  plot_energy.py  scaling_job.sh  wave_equation.cpp  wave_equation.hpp
RECAP/: RECAP1.md  RECAP2.md
include/: README.md  input_parser.cpp  input_parser.hpp  parameters.prm  test_cases.hpp
output_energy/: energy.csv
output_results/: dispersion.csv  solution_0.0.vtu  solution_0.1.vtu  solution_0.2.vtu  solution_0.3.vtu  solution_0.4.vtu  solution_0.pvtu  solution_1.0.vtu  solution_1.1.vtu  solution_1.2.vtu  solution_1.3.vtu  solution_1.4.vtu  solution_1.pvtu  solution_10.0.vtu  solution_10.1.vtu  solution_10.2.vtu  solution_10.3.vtu  solution_10.4.vtu  solution_10.pvtu  solution_100.0.vtu  solution_100.1.vtu  solution_100.2.vtu  solution_100.3.vtu  solution_100.4.vtu  solution_100.pvtu  solution_101.0.vtu  solution_101.1.vtu  solution_101.2.vtu  solution_101.3.vtu  solution_101.4.vtu  solution_101.pvtu  solution_102.0.vtu  solution_102.1.vtu  solution_102.2.vtu  solution_102.3.vtu  solution_102.4.vtu  solution_102.pvtu  solution_103.0.vtu  solution_103.1.vtu  solution_103.2.vtu  (+3131 more)
scripts/: .gitignore  CMakeCache.txt  README.md  convergence.py  plot_dispersion.py  plot_dispersion_comparison.py  plot_energy.py  plot_energy_conservation.py  plot_energy_dissipation.py  plot_energy_work_overlap.py  strong_scaling.py  weak_scaling.py
wave_equation/: README.md  wave_equation.cpp  wave_equation.hpp
